--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 /**************************/
 :root {
     --brown: #412411;
+    --cream: #ffffed;
     /* This is an example */
     /* Create your own color variables */
     /* At most I recommend using 3 colors 
@@ -18,25 +19,70 @@
 }
 
 body {
-    background-color: #c5638a;
+    background-color: skyblue;
     /* the bg color would be the same as your 
         quote section bg color */
+    color: black;
 }
 
 
 
-/***  LANDING PAGE ***/
+.LandingPage {
+    background-image: url(images/i.jpeg);
+    min-height: 500px;
+    width: 100%;
+    opacity: .5;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    z-index: -1;
+}
+
 header img {
     width: 50px;
+    position: absolute;
+    margin: 20px;
 }
+
 
 
 /***  NAVIGATION BAR ***/
+.navLinks {
+    list-style-type: none;
+    display: flex;
+}
 
+ul.navLinks Li {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
 
+ul.navLinks a {
+    color: var(--brown);
+    font-size: 25px;
+    text-decoration: none;
+}
+
+nav {
+    display: flex;
+    justify-content: flex-end;
+    height: 80px;
+    padding-top: 35px;
+    padding-bottom: 35px;
+    padding-left: 5%;
+    padding-right: 5%;
+}
 
 /***  TITLE ***/
-
+header h1 {
+    text-align: center;
+    margin-top: 150px;
+    font-size: 50px;
+    color: var(--brown);
+}
 
 
 /***  QUOTE SECTION ***/
@@ -45,7 +91,7 @@ header img {
 
 /***  CARDS ***/
 .column img {
-    height: 100px
+    height: 200px
 }
 
 
@@ -55,6 +101,13 @@ header img {
 
 /***  FOOTER ***/
 
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 20px 0px 30px 0px;
+    margin-top: 20px;
+}
 
 
 
